# haam

./: .gitignore  CLEANUP_SUMMARY.md  LICENSE  MANIFEST.in  README.md  TOPIC_LABELING_METHODOLOGY.md  VALIDITY_COLORING_UPDATE.md  colab_cell_criterion_ranking.py  debug_dark_colors_analysis.md  generate_wordclouds_nvembed.py  generate_wordclouds_validity_enhanced.py  generate_wordclouds_validity_final.py  generate_wordclouds_validity_final_aligned.py  generate_wordclouds_validity_nvembed.py  haam_init.py  haam_package.py  haam_readme.md  haam_setup.py  haam_topics.py  haam_usage_guide.py  haam_wordcloud_topic_quartiles_patch.py  pyproject.toml  run_haam_analysis.py  run_haam_analysis_v1.3.py  run_this_colab.py  setup.cfg  setup.py  test_arrow_plot_coloring.py  test_display_direct.py  test_final_verification.py  test_model_outputs.py
.archive/: README.md
.archive/docs_and_notes/: ARROW_PLOT_UPDATE_PLAN.md  HAAM_ARCHITECTURE_MAP.md  VISUALIZATION_GUIDE.md  degrees_of_freedom_analysis.md  haam_readme.md  orphan_files_analysis.md
.archive/modules/: haam_wordcloud_backup.py
.archive/scripts/: analyze_codebase_final.py  generate_wordclouds_nvembed_display.py  generate_wordclouds_validity_aligned_v2.py  generate_wordclouds_validity_enhanced.py  generate_wordclouds_validity_example.py  generate_wordclouds_validity_final_aligned_v2.py  (+7 more)
data/: anger_family_with_angry_word_count.csv
docs/: .gitkeep  citation.rst  conf.py  index.rst  installation.rst  interpretation_guide.rst  methodology.rst  quickstart.rst  theoretical_framework.rst  validity_coloring_guide.md  wordcloud_feature.md
examples/: 3d_pca_arrow_example.py  anger_family_analysis.py  anger_family_colab_analysis.py  comprehensive_pc_analysis_example.py  lasso_model_outputs.csv  model_summary.csv  post_lasso_model_outputs.csv  ranking_methods_example.py  simple_example.py  wordcloud_example.py
haam/: __init__.py  haam_bws.py  haam_init.py  haam_package.py  haam_topics.py  haam_visualizations.py  haam_visualizations_backup.py  haam_wordcloud.py
tests/: test_aligned_validity.py  test_display.py  test_validity_coloring.py
tools/: README.md
(+55 files in other folders)
