[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "haam"
version = "0.1.0"
description = "Human-AI Accuracy Model (HAAM) - Analyze how humans and AI use information"
readme = "haam_readme.md"
requires-python = ">=3.7"
license = {text = "MIT"}
authors = [
    {name = "Raymond Li", email = "raymondli-me@github.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "numpy>=1.19.0",
    "pandas>=1.1.0",
    "scikit-learn>=0.24.0",
    "statsmodels>=0.12.0",
    "scipy>=1.5.0",
    "matplotlib>=3.3.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "sentence-transformers>=2.0.0",
    "umap-learn>=0.5.0",
    "hdbscan>=0.8.27",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.0",
    "black>=21.0",
    "flake8>=3.9",
]

[project.urls]
Homepage = "https://github.com/raymondli-me/haam"
Documentation = "https://github.com/raymondli-me/haam#readme"
Repository = "https://github.com/raymondli-me/haam.git"
Issues = "https://github.com/raymondli-me/haam/issues"

[tool.setuptools]
packages = ["haam"]
package-dir = {"": "."}

[tool.setuptools.package-data]
haam = ["*.md"]