[metadata]
name = haam
version = 0.1.0

[options]
packages = find:
python_requires = >=3.7
install_requires =
    numpy>=1.19.0
    pandas>=1.1.0
    scikit-learn>=0.24.0
    statsmodels>=0.12.0
    scipy>=1.5.0
    matplotlib>=3.3.0
    seaborn>=0.11.0
    plotly>=5.0.0
    sentence-transformers>=2.0.0
    umap-learn>=0.5.0
    hdbscan>=0.8.27